force-app/main/default/objects/LookupFields__c/LookupFields__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>LookupFields</label>
</CustomObject>