force-app/main/default/objects/LookupFields__c/fields/Business_Case_Tab__c.field-meta.xml
<CustomField>
    <fullName>Business_Case_Tab__c</fullName>
    <label>Business Case - Tab</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>