force-app/main/default/objects/LookupFields__c/fields/Initiative_Investment_Area__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Investment_Area__c</fullName>
    <label>Initiative - Investment Area</label>
    <length>100</length>
    <type>Text</type>
</CustomField>