force-app/main/default/objects/LookupFields__c/fields/Initiative_Plan__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Plan__c</fullName>
    <label>Initiative - Plan</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>