force-app/main/default/objects/LookupFields__c/fields/Initiative_Tab__c.field-meta.xml
<CustomField>
    <fullName>Initiative_Tab__c</fullName>
    <label>Initiative - Tab</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>