force-app/main/default/objects/LookupFields__c/fields/Measure_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Measure_Initiative__c</fullName>
    <label>Measure - Initiative</label>
    <length>100</length>
    <type>Text</type>
</CustomField>