force-app/main/default/objects/LookupFields__c/fields/Measure_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Measure_Organisation__c</fullName>
    <label>Measure - Organisation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>