force-app/main/default/objects/LookupFields__c/fields/Measure_Tab__c.field-meta.xml
<CustomField>
    <fullName>Measure_Tab__c</fullName>
    <label>Measure - Tab</label>
    <length>3</length>
    <type>Text</type>
</CustomField>